# nginx_log_parser_dj

./: .gitignore  Makefile  README.md  compose.yaml
core/: dockerfile  pyproject.toml  startup.sh
core/config/: settings.py  urls.py
core/logs/: admin.py  models.py  serializers.py  urls.py  views.py
core/logs/management/commands/: _log_pattern.py  _resources.py  parse_log.py
core/logs/migrations/: 0001_initial.py  0002_remove_nginxlog_gin_uri_trgm_idx_and_more.py
